change index to html and remove php version tags from ressources

--- a/prod/index.html
+++ b/prod/index.html
@@ -7,10 +7,10 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta name="mobile-web-app-capable" content="yes" />
-  <link rel="icon" sizes="192x192" href="img/icon.png?v=<?php echo uniqid(); ?>">
+  <link rel="icon" sizes="192x192" href="img/icon.png">
   <link rel="stylesheet" href="ressources/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="ressources/html5-boilerplate/css/main.css">
-  <link rel="stylesheet" href="css/app.css?v=<?php echo uniqid(); ?>"/>
+  <link rel="stylesheet" href="css/app.css"/>
   <script src="ressources/polymer/platform/platform.js"></script>
   <link rel="import" href="ressources/polymer/paper-elements/paper-elements.html">
   <link rel="import" href="partials/components/icon-set.html">
@@ -35,12 +35,12 @@
   <script src="ressources/lodash/dist/lodash.underscore.min.js"></script>
   <script src="ressources/angular-google-maps/dist/angular-google-maps.min.js"></script>
   <script src="ressources/angular-local-storage/angular-local-storage.min.js"></script>
-  <script src="js/app.js?v=<?php echo uniqid(); ?>"></script>
-  <script src="js/services.js?v=<?php echo uniqid(); ?>"></script>  
-  <script src="js/navbar.js?v=<?php echo uniqid(); ?>"></script>  
-  <script src="js/side-menu.js?v=<?php echo uniqid(); ?>"></script>  
-  <script src="js/map.js?v=<?php echo uniqid(); ?>"></script>
-  <script src="js/station.js?v=<?php echo uniqid(); ?>"></script>
-  <script src="js/favoris.js?v=<?php echo uniqid(); ?>"></script>
+  <script src="js/app.js"></script>
+  <script src="js/services.js"></script>  
+  <script src="js/navbar.js"></script>  
+  <script src="js/side-menu.js"></script>  
+  <script src="js/map.js"></script>
+  <script src="js/station.js"></script>
+  <script src="js/favoris.js"></script>
 </body>
 </html>
