V1 Beta, need to optimise map API for mobile user, so slow...

--- a/prod/side-menu/side-menu.html
+++ b/prod/side-menu/side-menu.html
@@ -15,7 +15,7 @@
 	    <ul class="links">
 	        <li>
 	        	<div>
-		        	<a ui-sref="map" ui-sref-active="active" ng-click="closeMenu()">
+		        	<a ui-sref="home" ui-sref-active="active" ng-click="closeMenu()">
 		        		<core-icon icon="customicon:map"></core-icon> Carte
 		        		<paper-ripple class="recenteringTouch" fit></paper-ripple>
 		        	</a>
