replaced Gmap api with leaflet.js and OpenStreet Map / add of markers clusting

--- a/prod/index.html
+++ b/prod/index.html
@@ -10,6 +10,9 @@
   <link rel="icon" sizes="192x192" href="img/icon.png">
   <link rel="stylesheet" href="ressources/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="ressources/html5-boilerplate/css/main.css">
+  <link rel="stylesheet" href="ressources/leaflet/leaflet.css">
+  <link rel="stylesheet" href="ressources/marker-cluster/MarkerCluster.css">
+  <link rel="stylesheet" href="ressources/leaflet-label/leaflet.label.css">
   <link rel="stylesheet" href="app.css"/>
   <script src="ressources/polymer/platform/platform.js"></script>
   <link rel="import" href="ressources/polymer/paper-elements/paper-elements.html">
@@ -38,8 +41,9 @@
   <script src="ressources/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="ressources/angular-resource/angular-resource.min.js"></script>
   <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
-  <script src="ressources/lodash/dist/lodash.underscore.min.js"></script>
-  <script src="ressources/angular-google-maps/dist/angular-google-maps.min.js"></script>
+  <script src='ressources/leaflet/leaflet.js'></script>
+  <script src='ressources/marker-cluster/leaflet.markercluster.js'></script>
+  <script src='ressources/leaflet-label/leaflet.label.js'></script>
   <script src="ressources/angular-local-storage/angular-local-storage.min.js"></script>
   <script src="app.js"></script>
   <script src="services.js"></script>  
