--- a/prod/side-menu/side-menu.html
+++ b/prod/side-menu/side-menu.html
@@ -3,7 +3,7 @@
     	<div class="head-part">
     		<div class="avatar">
     			<a href="http://simonbats.com" title="Portfolio de Simon Bats" target="_blank">
-    				<img src="img/avatar-sb.png" alt="Simon Bats"/>
+    				<img src="img/avatar.png" alt="Simon Bats"/>
     			</a>
     		</div>
     		<div class="text-infos">
